=== HEAD

* Recognize bool type as boolean in the schema dumper (jeremyevans) (#1192)

* Make Dataset#to_hash and #to_hash_groups work correctly for model datasets doing eager loading (jeremyevans)

* Make delay_add_association plugin handle hashes and primary keys passed to add_* association methods (jeremyevans) (#1187)

* Treat :Bignum as a generic type, to support 64-bit integers on ruby 2.4+, where Bignum == Integer (jeremyevans)

* Add server_logging extension for including server/shard information when logging queries (jeremyevans)

* Add Database#log_connection_info, for including connection information when logging queries (jeremyevans)

* Add Dataset#skip_locked for skipping locked rows on PostgreSQL 9.5+, MSSQL, and Oracle (jeremyevans)

* Allow Sequel::Model#lock! to accept an optional lock style (petedmarsh) (#1183)

* Add sql_comments extension for setting SQL comments on queries (jeremyevans)

* Make Postgres::PGRange#cover? handle empty, unbounded, and exclusive beginning ranges (jeremyevans)

* Fix frozen string literal issues on JRuby 9.1.0.0 (jeremyevans)

* Allow json_serializer :include option with cascaded values to work correctly when used with association_proxies (jeremyevans)

=== 4.34.0 (2016-05-01)

* Add support for :dataset_associations_join association option to dataset_associations plugin, for making resulting datasets have appropriate joins (jeremyevans)

* Log server connection was attempted to in PoolTimeout exception messages in sharded connection pool (jeremyevans)

* Log Database :name option in PoolTimeout exception messages (bigkevmcd, jeremyevans) (#1176)

* Add duplicate_columns_handler extension, for raising or warning if a dataset returns multiple columns with the same name (TSMMark, jeremyevans) (#1175)

* Support registering per-Database custom range types in the pg_range extension (steveh) (#1174)

* Support :preconnect=>:concurrently Database option for preconnecting in separate threads (kch, jeremyevans) (#1172)
